# Agent-Harness-Scaffold-Codex

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  WORKFLOW.md  docker-compose.yml  pyproject.toml
.agents/skills/create-plan-symphony/: SKILL.md
.agents/skills/create-plan-symphony/agents/: openai.yaml
.agents/skills/create-plan-symphony/scripts/: escalate_to_human.py  persist_plan.py
.agents/skills/superpowers-l4-quality-gates/: SKILL.md
.agents/skills/superpowers-l4-quality-gates/agents/: openai.yaml
.agents/skills/superpowers-l4-quality-gates/workflows/: executing-plans.md  finishing-development-branch.md  requesting-code-review.md  systematic-debugging.md  test-driven-development.md  verification-before-completion.md  writing-plans.md
.plans/: CAT-10.md  CAT-2.md  CAT-3.md  EXAMPLE.md
config/: mcp.servers.yaml
docs/: PROJECT_MEMORY.md  QUALITY_GATES.md
scripts/: demo_test_run.py  e2e_scenario.py  project_memory.py  validate_repo.py
src/symphony_l4_runner/: __init__.py  agent_runner.py  cli.py  config.py  doctor.py  issue.py  logging_setup.py  mcp_memory_server.py  mcp_proxy.py  mcp_shell_server.py  memory.py  memory_cli.py  security.py  supervisor.py  workspace.py
tests/: test_agent_memory_context.py  test_contract_first_vertical_slicing.py  test_doctor.py  test_mcp_jira_adapter.py  test_project_memory.py  test_project_memory_cli.py  test_quality_gates.py  test_validate_repo.py
